--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.75",
     "@types/react-dom": "18.2.24",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "^14.1.4",
