--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "devstar-resume-page-v2",
-	"version": "2.1.0",
-	"description": "Personal Resume Website src built with Next.js",
+	"version": "2.1.1",
+	"description": "Personal Resume Website src built with Next.js + TailwindCSS",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
